fix (hopefully) scaling on firefox mobile
fingers crossed

--- a/style.scss
+++ b/style.scss
@@ -503,7 +503,7 @@ figure.wp-block-gallery {
     margin-bottom: 0px !important;
 
     img {
-        height: auto;
+        height: auto !important;
     }
 }
 
